SIM-185 ADD encapsulating of all primitive variables